---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 2025-05-12
  Changes:
    - PlanetsLib no longer has Space Age as a mandatory dependency.
---------------------------------------------------------------------------------------------------
Version: 1.3.8
Date: 2025-05-11
  Changes:
    - New API: get_child_technologies.
---------------------------------------------------------------------------------------------------
Version: 1.3.7
Date: 2025-05-04
  Changes:
    - Fixed a crash caused presumably by another mod shadowing the 'util' namespace.
---------------------------------------------------------------------------------------------------
Version: 1.3.6
Date: 2025-05-02
  Changes:
    - Fixed a crash in excise_tech_from_tech_tree.
---------------------------------------------------------------------------------------------------
Version: 1.3.5
Date: 2025-05-02
  Changes:
    - Fixed a crash in remove_surface_condition.
---------------------------------------------------------------------------------------------------
Version: 1.3.4
Date: 2025-04-26
  Changes:
    - Fixed API export.
---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: 2025-04-26
  Changes:
    - New API: remove_surface_condition
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2025-04-25
  Changes:
    - New API: excise_effect_from_tech_tree
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2025-04-21
  Changes:
    - Renamed all the 'magic' fields supported on prototypes to start with 'planetslib_' to make them less cryptic. (The previous names are still supported.)